--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,1 +1,7 @@
 <p>books works!</p>
+<div>
+  <button (click)="setId()">Set ID</button>
+</div>
+<div>
+  Current Book ID: {{ currentBookId() }}
+</div>
