--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <li><a routerLink="/">Home</a></li>
   <li><a routerLink="/users">users</a></li>
   <li><a routerLink="/books">books</a></li>
+  <li><a routerLink="/mark">Mark</a></li>
 </ul>
 <h1>{{ title }}</h1>
 <router-outlet></router-outlet>
