--- a/src/app/mark/mark.component.html
+++ b/src/app/mark/mark.component.html
@@ -1,4 +1,4 @@
 <p>mark works!</p>
 <input #inputAquaticCreature type="text" placeholder="Enter a new creature">
 <button (click)="addAquaticCreature(inputAquaticCreature.value)">Add creature</button>
-<app-sub [list]="aquaticCreatures"></app-sub>
+<app-sub test="toto" [list]="aquaticCreatures"></app-sub>
