feat: ngrx store

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,3 +11,5 @@
     <button [disabled]="!actorForm.valid" type="submit">OK</button>
   </div>
 </form>
+<hr>
+<div><button (click)="incrementCount()">Counter</button></div>
