--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <li><a routerLink="/users">users</a></li>
   <li><a routerLink="/books">books</a></li>
   <li><a routerLink="/mark">Mark</a></li>
+  <li><a routerLink="/binding">Binding</a></li>
 </ul>
 <h1>{{ title }}</h1>
 <router-outlet></router-outlet>
